[package]
name = "arwa"
version = "0.1.1"
description = "A Rusty interface around the web-sys APIs."
keywords = ["web", "wasm"]
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2018"
repository = "https://github.com/RSSchermer/ARWA"
homepage = "https://github.com/RSSchermer/ARWA"
license = "MIT"
readme = "../README.md"

[dependencies]
bitflags = "1.2.1"
delegate = "0.3.0"
futures = "0.3.19"
js-sys = "0.3.55"
url = "2.2.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "console",
    "AnimationEvent",
    "AssignedNodesOptions",
    "Attr",
    "AudioTrack",
    "AudioTrackList",
    "BarProp",
    "Coordinates",
    "Crypto",
    "CssStyleDeclaration",
    "Document",
    "DocumentFragment",
    "DocumentType",
    "DomException",
    "DomRect",
    "DomRectList",
    "DomRectReadOnly",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ErrorEvent",
    "EventTarget",
    "FocusEvent",
    "Geolocation",
    "GetRootNodeOptions",
    "HashChangeEvent",
    "History",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlDocument",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormControlsCollection",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaError",
    "MediaList",
    "MediaStream",
    "MouseEvent",
    "NamedNodeMap",
    "Navigator",
    "Node",
    "NodeList",
    "PageTransitionEvent",
    "Performance",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
    "PerformanceResourceTiming",
    "PerformanceServerTiming",
    "PointerEvent",
    "PopStateEvent",
    "Position",
    "PositionError",
    "PositionOptions",
    "ProgressEvent",
    "PromiseRejectionEvent",
    "RadioNodeList",
    "RegistrationOptions",
    "Screen",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "Storage",
    "StorageEvent",
    "StyleSheet",
    "SubtleCrypto",
    "TextTrack",
    "TextTrackKind",
    "TimeRanges",
    "TrackEvent",
    "TransitionEvent",
    "UiEvent",
    "ValidityState",
    "VideoTrack",
    "VideoTrackList",
    "WheelEvent",
    "Window",
]
