[package]
name = "arwa"
version = "0.1.1"
description = "A Rusty interface around the web-sys APIs."
keywords = ["web", "wasm"]
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2018"
repository = "https://github.com/RSSchermer/ARWA"
homepage = "https://github.com/RSSchermer/ARWA"
license = "MIT"
readme = "../README.md"

[dependencies]
arwa_parse = { version = "0.1.0", path = "../arwa_parse" }
bitflags = "1.2.1"
delegate = "0.3.0"
form_urlencoded = "1.0.1"
futures = "0.3.19"
js-sys = "0.3.55"
lazycell = "1.3.0"
mime_4 = { version = "0.4.0-a.0", features = ["macro"] }
oxilangtag = "0.1.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"

[dependencies.web-sys]
version = "0.3.55"
features = [
    "console",
    "AbortController",
    "AbortSignal",
    "AddEventListenerOptions",
    "AnimationEvent",
    "AssignedNodesOptions",
    "Attr",
    "AudioTrack",
    "AudioTrackList",
    "BarProp",
    "Blob",
    "BlobPropertyBag",
    "BroadcastChannel",
    "CdataSection",
    "Client",
    "ClientQueryOptions",
    "Clients",
    "ClientType",
    "Comment",
    "Coordinates",
    "Crypto",
    "CssConditionRule",
    "CssCounterStyleRule",
    "CssFontFaceRule",
    "CssFontFeatureValuesRule",
    "CssGroupingRule",
    "CssImportRule",
    "CssKeyframeRule",
    "CssKeyframesRule",
    "CssMediaRule",
    "CssNamespaceRule",
    "CssPageRule",
    "CssRule",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleRule",
    "CssStyleSheet",
    "CssSupportsRule",
    "DataTransfer",
    "DedicatedWorkerGlobalScope",
    "Document",
    "DocumentFragment",
    "DocumentType",
    "DomException",
    "DomRect",
    "DomRectList",
    "DomRectReadOnly",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ErrorEvent",
    "EventTarget",
    "File",
    "FileList",
    "FilePropertyBag",
    "FocusEvent",
    "FrameType",
    "Geolocation",
    "GetRootNodeOptions",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlDocument",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormControlsCollection",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMenuElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaError",
    "MediaList",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamTrackEvent",
    "MediaStreamTrackState",
    "MessageChannel",
    "MessagePort",
    "MouseEvent",
    "NamedNodeMap",
    "Navigator",
    "Node",
    "NodeList",
    "PageTransitionEvent",
    "Performance",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
    "PerformanceResourceTiming",
    "PerformanceServerTiming",
    "PointerEvent",
    "PopStateEvent",
    "Position",
    "PositionError",
    "PositionOptions",
    "ProcessingInstruction",
    "ProgressEvent",
    "PromiseRejectionEvent",
    "RadioNodeList",
    "Range",
    "ReferrerPolicy",
    "RegistrationOptions",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestDestination",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ResponseInit",
    "ResponseType",
    "Screen",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollRestoration",
    "ScrollToOptions",
    "Selection",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorkerUpdateViaCache",
    "ShadowRoot",
    "ShadowRootMode",
    "ShadowRootInit",
    "SharedWorker",
    "SharedWorkerGlobalScope",
    "Storage",
    "StorageEvent",
    "StyleSheet",
    "StyleSheetList",
    "SubtleCrypto",
    "Text",
    "TextTrack",
    "TextTrackKind",
    "TextTrackList",
    "TimeRanges",
    "TrackEvent",
    "TransitionEvent",
    "UiEvent",
    "Url",
    "ValidityState",
    "VideoTrack",
    "VideoTrackList",
    "VisibilityState",
    "WheelEvent",
    "Window",
    "WindowClient",
    "WorkerGlobalScope",
    "WorkerLocation",
    "WorkerNavigator",
    "WorkerOptions",
    "WorkerType"
]
