[package]
name = "arwa"
version = "0.1.1"
description = "A Rusty interface around the web-sys APIs."
keywords = ["web", "wasm"]
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"
repository = "https://github.com/RSSchermer/ARWA"
homepage = "https://github.com/RSSchermer/ARWA"
license = "MIT"
readme = "../README.md"

[dependencies]
arwa_macro = { version = "0.1.0", path = "../arwa_macro" }
arwa_parse = { version = "0.1.0", path = "../arwa_parse" }
bitflags = "1.3.2"
delegate = "0.6.2"
form_urlencoded = "1.0.1"
futures = "0.3.21"
js-sys = "0.3.64"
lazycell = "1.3.0"
mime_4 = { version = "0.4.0-a.0", features = ["macro"] }
oxilangtag = "0.1.2"
pin-project = "1.0.10"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "console",
    "AbortController",
    "AbortSignal",
    "AddEventListenerOptions",
    "AnimationEvent",
    "AssignedNodesOptions",
    "Attr",
    "AudioTrack",
    "AudioTrackList",
    "BarProp",
    "Blob",
    "BlobPropertyBag",
    "BroadcastChannel",
    "ByteLengthQueuingStrategy",
    "CdataSection",
    "Client",
    "ClientQueryOptions",
    "Clients",
    "ClientType",
    "Comment",
    "Coordinates",
    "CountQueuingStrategy",
    "Crypto",
    "CssConditionRule",
    "CssCounterStyleRule",
    "CssFontFaceRule",
    "CssFontFeatureValuesRule",
    "CssGroupingRule",
    "CssImportRule",
    "CssKeyframeRule",
    "CssKeyframesRule",
    "CssMediaRule",
    "CssNamespaceRule",
    "CssPageRule",
    "CssRule",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleRule",
    "CssStyleSheet",
    "CssSupportsRule",
    "CustomElementRegistry",
    "CustomEvent",
    "CustomEventInit",
    "DataTransfer",
    "DedicatedWorkerGlobalScope",
    "Document",
    "DocumentFragment",
    "DocumentType",
    "DomException",
    "DomRect",
    "DomRectList",
    "DomRectReadOnly",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ElementCreationOptions",
    "ErrorEvent",
    "EventTarget",
    "File",
    "FileList",
    "FilePropertyBag",
    "FocusEvent",
    "FrameType",
    "Geolocation",
    "GetRootNodeOptions",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlDocument",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormControlsCollection",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMenuElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOptionsCollection",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "ImageBitmap",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaError",
    "MediaList",
    "MediaStream",
    "MediaStreamTrack",
    "MediaStreamTrackEvent",
    "MediaStreamTrackState",
    "MessageChannel",
    "MessageEvent",
    "MessagePort",
    "MouseEvent",
    "NamedNodeMap",
    "Navigator",
    "Node",
    "NodeList",
    "PageTransitionEvent",
    "Performance",
    "PerformanceEntry",
    "PerformanceMark",
    "PerformanceMeasure",
    "PerformanceResourceTiming",
    "PerformanceServerTiming",
    "PointerEvent",
    "PopStateEvent",
    "Position",
    "PositionError",
    "PositionOptions",
    "ProcessingInstruction",
    "ProgressEvent",
    "PromiseRejectionEvent",
    "QueuingStrategy",
    "QueuingStrategyInit",
    "RadioNodeList",
    "Range",
    "ReadableByteStreamController",
    "ReadableStream",
    "ReadableStreamByobReader",
    "ReadableStreamByobRequest",
    "ReadableStreamDefaultController",
    "ReadableStreamDefaultReader",
    "ReadableStreamGetReaderOptions",
    "ReadableStreamReaderMode",
    "ReadableWritablePair",
    "ReferrerPolicy",
    "RegistrationOptions",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestDestination",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "ResponseInit",
    "ResponseType",
    "Screen",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollRestoration",
    "ScrollToOptions",
    "Selection",
    "ServiceWorker",
    "ServiceWorkerContainer",
    "ServiceWorkerGlobalScope",
    "ServiceWorkerRegistration",
    "ServiceWorkerState",
    "ServiceWorkerUpdateViaCache",
    "ShadowRoot",
    "ShadowRootMode",
    "ShadowRootInit",
    "SharedWorker",
    "SharedWorkerGlobalScope",
    "Storage",
    "StorageEvent",
    "StyleSheet",
    "StyleSheetList",
    "SubtleCrypto",
    "Text",
    "TextTrack",
    "TextTrackKind",
    "TextTrackList",
    "TimeRanges",
    "TrackEvent",
    "TransformStream",
    "TransformStreamDefaultController",
    "TransitionEvent",
    "UiEvent",
    "Url",
    "ValidityState",
    "VideoTrack",
    "VideoTrackList",
    "VisibilityState",
    "WheelEvent",
    "Window",
    "WindowClient",
    "Worker",
    "WorkerGlobalScope",
    "WorkerLocation",
    "WorkerNavigator",
    "WorkerOptions",
    "WorkerType",
    "WritableStream",
    "WritableStreamDefaultController",
    "WritableStreamDefaultWriter"
]
