[package]
name = "arwa_macro"
version = "0.1.0"
description = "Macro support for the arwa crate."
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"
repository = "https://github.com/RSSchermer/ARWA"
homepage = "https://github.com/RSSchermer/ARWA"
license = "MIT"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
arwa_parse = { version = "0.1.0", path = "../arwa_parse" }
oxilangtag = "0.1.2"
proc-macro2 = "1.0.36"
quote = "1.0.15"
url = "2.2.2"

[dependencies.syn]
version = "1.0.86"
features = [
    "full"
]
