[package]
name = "rudo"
version = "0.1.0"
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.1"
gloo-events = "0.1.1"
wasm-bindgen = "0.2.55"

[dependencies.web-sys]
version = "0.3.31"
features = [
    "EventTarget",
    "HtmlButtonElement",
    "MouseEvent",
    "Window",
]
