[package]
name = "rudo"
version = "0.1.0"
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2.1"
delegate = "0.3.0"
futures = "0.3.1"
gloo-events = "0.1.1"
js-sys = "0.3.31"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

[dependencies.web-sys]
version = "0.3.31"
features = [
    "AnimationEvent",
    "AssignedNodesOptions",
    "Attr",
    "AudioTrack",
    "AudioTrackList",
    "CssStyleDeclaration",
    "DocumentFragment",
    "DocumentType",
    "DomException",
    "DomRect",
    "DomRectList",
    "DomRectReadOnly",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ErrorEvent",
    "EventTarget",
    "FocusEvent",
    "GetRootNodeOptions",
    "HashChangeEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlCollection",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlDocument",
    "HtmlElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormControlsCollection",
    "HtmlFormElement",
    "HtmlHeadElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMediaElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlModElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlQuoteElement",
    "HtmlScriptElement",
    "HtmlSelectElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlStyleElement",
    "HtmlTableCaptionElement",
    "HtmlTableCellElement",
    "HtmlTableColElement",
    "HtmlTableElement",
    "HtmlTableRowElement",
    "HtmlTableSectionElement",
    "HtmlTemplateElement",
    "HtmlTextAreaElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaError",
    "MediaList",
    "MediaStream",
    "MouseEvent",
    "NamedNodeMap",
    "Node",
    "NodeList",
    "PageTransitionEvent",
    "PointerEvent",
    "PopStateEvent",
    "ProgressEvent",
    "PromiseRejectionEvent",
    "RadioNodeList",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollLogicalPosition",
    "ScrollToOptions",
    "Storage",
    "StorageEvent",
    "StyleSheet",
    "TextTrack",
    "TextTrackKind",
    "TimeRanges",
    "TrackEvent",
    "TransitionEvent",
    "UiEvent",
    "ValidityState",
    "VideoTrack",
    "VideoTrackList",
    "WheelEvent",
    "Window",
]
