[package]
name = "geolocation"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.1"
arwa = { version = "0.1.0", path = "../../arwa" }
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

[dependencies.web-sys]
version = "0.3.31"
features = [
  'console'
]
