[package]
name = "indexed-db"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
arwa = { version = "0.1.0", path = "../../arwa" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
