[package]
name = "media-element"
version = "0.1.0"
authors = ["Roland Schermer <roland0507@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.1"
rudo = { version = "0.1.0", path = "../../rudo" }
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"

[dependencies.web-sys]
version = "0.3.31"
features = [
  'Document',
  'Element',
  'HtmlAudioElement',
  'HtmlButtonElement',
  'Window',
  'console'
]
